syntax = "proto3";

package Auth;
option go_package = "./protocolbuffers";


message User{
  string id = 1;
  string email = 2;
}


message AuthUser{
  string email = 1;
  string password = 2;
}


service AuthService{
  rpc CreateUser(User) returns (User){};
  rpc GetAuthUser(User) returns (AuthUser){};
}